Ready to deliver, create zip file

--- a/Assignment1/q2/q2.ipynb
+++ b/Assignment1/q2/q2.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4c2868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install - U pandas\n",
+    "!pip install - U numpy\n",
+    "!pip install - U plotly == 5.10.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "929680d2",
    "metadata": {},
@@ -23,26 +35,23 @@
    ],
    "source": [
     "# Question 2: Logistic Regression\n",
-    "!pip install -U pandas\n",
-    "!pip install -U numpy\n",
-    "!pip install -U plotly==5.10.0\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
     "import matplotlib.pyplot as plt\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "dataset = np.genfromtxt('../data/q2/q2test.csv', delimiter=',')\n",
     "\n",
-    "x1 = dataset[1:, 0].reshape(-1,1)\n",
-    "x2 = dataset[1:, 1].reshape(-1,1)\n",
+    "x1 = dataset[1:, 0].reshape(-1, 1)\n",
+    "x2 = dataset[1:, 1].reshape(-1, 1)\n",
     "x0 = np.ones((x1.shape))\n",
     "x_test = np.append(x0, x1, axis=1)\n",
     "x_test = np.append(x_test, x2, axis=1)\n",
-    "y_test = dataset[1:, 2].reshape(-1,1)\n",
+    "y_test = dataset[1:, 2].reshape(-1, 1)\n",
     "\n",
-    "n = x_test.shape[0]"
+    "n = x_test.shape[0]\n"
    ]
   },
   {
@@ -52,35 +61,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Question 2.a - Sample million of points\n",
+    "# Question 2.a - Sample million of points\n",
     "\n",
-    "#Data points given\n",
-    "data_points= 1000000\n",
-    "#Intercept term\n",
-    "x0 = np.ones((data_points,1)) \n",
+    "# Data points given\n",
+    "data_points = 1000000\n",
+    "# Intercept term\n",
+    "x0 = np.ones((data_points, 1))\n",
     "\n",
-    "#Samples\n",
-    "x1 = np.random.normal(3, 2, data_points).reshape(-1,1)\n",
-    "x2 = np.random.normal(-1, 2, data_points).reshape(-1,1)\n",
+    "# Samples\n",
+    "x1, x2 = np.random.normal(3, 2, data_points).reshape(-1,\n",
+    "                                                     1), np.random.normal(-1, 2, data_points).reshape(-1, 1)\n",
     "\n",
-    "#Create matrix\n",
-    "x = np.append(x0,x1,axis=1)\n",
+    "# Create matrix\n",
+    "x = np.append(x0, x1, axis=1)\n",
     "x = np.append(x, x2, axis=1)\n",
     "\n",
-    "#Sample epsilon error\n",
-    "eps = np.random.normal(0, np.sqrt(2), data_points).reshape(-1,1)\n",
-    "\n",
+    "# Sample epsilon error\n",
+    "eps = np.random.normal(0, np.sqrt(2), data_points).reshape(-1, 1)\n",
     "theta = np.array([[3], [1], [2]])\n",
-    "\n",
-    "#Generate the value of Y (given X, parameterized by given Theta)\n",
     "y = x.dot(theta) + eps\n",
     "\n",
-    "#Shuffle data\n",
+    "# randomize data\n",
     "temp = np.append(x, y, axis=1)\n",
     "np.random.shuffle(temp)\n",
     "\n",
-    "x = temp[:,0:3]\n",
-    "y = temp[:,-1:]"
+    "x = temp[:, 0:3]\n",
+    "y = temp[:, -1:]\n"
    ]
   },
   {
@@ -2556,77 +2562,81 @@
     }
    ],
    "source": [
-    "#Question 2.b - Apply Stochastic gradient descent\n",
+    "# Question 2.b - Apply Stochastic gradient descent\n",
     "import time\n",
     "\n",
-    "alpha = 0.001  \n",
+    "alpha = 0.001\n",
     "\n",
-    "# Prediction function: h(θ) = x^Tθ \n",
+    "# Prediction function: h(θ) = x^Tθ\n",
+    "\n",
+    "\n",
     "def predict(x, theta):\n",
     "    return x.dot(theta)\n",
     "\n",
     "# Cost function: J(θ) = 1/2m * Σ(y-h(θ))^2\n",
-    "def cost(x,y,theta, m):\n",
-    "    return (1/(2*m)) * np.sum((y - predict(x,theta))**2)\n",
+    "\n",
+    "\n",
+    "def cost(x, y, theta, m):\n",
+    "    return (1/(2*m)) * np.sum((y - predict(x, theta))**2)\n",
+    "\n",
     "\n",
     "cost_0 = cost(x, y, theta, data_points)\n",
     "print(f\"Initial Cost:{cost_0}\")\n",
     "\n",
     "\n",
     "def cost_grd(x, y, theta, m):\n",
-    "    return (1/m) * (np.zeros((3,1))+  x.T.dot(x.dot(theta)-y))\n",
+    "    return (1/m) * (np.zeros((3, 1)) + x.T.dot(x.dot(theta)-y))\n",
     "\n",
     "\n",
     "# Stochastic descent function\n",
-    "def stochastic_gradient_descent(x, y, theta, alpha, r, batches, threshold=10e-7):\n",
-    "    \n",
+    "def stochastic_gradient_descent(x, y, theta, alpha, r, batches, threshold=10e-8):\n",
+    "\n",
     "    start = time.time()\n",
-    "    theta = np.zeros((3,1))\n",
-    "    i=0\n",
+    "    theta = np.zeros((3, 1))\n",
+    "    i = 0\n",
     "    c, c_avg = 0.0, np.array([cost(x[0], y[0], theta, 1)])\n",
     "    theta_hist = theta\n",
     "\n",
     "    while True:\n",
-    "        i+=1\n",
+    "        i += 1\n",
     "        count = 0\n",
-    "        c_init = cost(x, y,theta, data_points)\n",
-    "        \n",
+    "        c_init = cost(x, y, theta, data_points)\n",
+    "\n",
     "        for b in batches:\n",
     "            c += cost(b[0], b[1], theta, r)\n",
-    "            \n",
-    "            check = 10000 if r==1 else 100 if r==100 else 10 if r==10000 else 1\n",
-    "            if(count%check == 0 and count!=0):\n",
+    "\n",
+    "            check = 10000 if r == 1 else 100 if r == 100 else 10 if r == 10000 else 1\n",
+    "            if (count % check == 0 and count != 0):\n",
     "                c /= check\n",
     "                c_avg = np.append(c_avg, c)\n",
-    "                c=0.0\n",
-    "            \n",
+    "                c = 0.0\n",
+    "\n",
     "            theta -= alpha * cost_grd(b[0], b[1], theta, r)\n",
-    "            theta_hist = np.append(theta_hist,theta,axis=1)\n",
-    "            count +=1\n",
-    "        \n",
+    "            theta_hist = np.append(theta_hist, theta, axis=1)\n",
+    "            count += 1\n",
+    "\n",
     "        c_final = cost(x, y, theta, data_points)\n",
     "        if (abs(c_final - c_init) < threshold):\n",
     "            break\n",
-    "    \n",
+    "\n",
     "    end = time.time()\n",
-    "        \n",
     "\n",
     "    return theta, c_final, theta_hist, i, end-start\n",
-    "\n",
     "\n",
     "\n",
     "values = []\n",
     "b_size = np.array([1, 100, 10000, 1000000])\n",
     "for r in b_size:\n",
-    "    #number of batches\n",
-    "    batches = [(x[i:i+r,:], y[i:i+r]) for i in range(0, data_points, r)]\n",
-    "    theta, c_final, theta_hist, iterations, t = stochastic_gradient_descent(x, y, theta, alpha, r, batches)\n",
-    "    print(f'Cost of the model is {c_final} with {iterations} iterations and {t} s')\n",
+    "    # number of batches\n",
+    "    batches = [(x[i:i+r, :], y[i:i+r]) for i in range(0, data_points, r)]\n",
+    "    theta, c_final, theta_hist, iterations, t = stochastic_gradient_descent(\n",
+    "        x, y, theta, alpha, r, batches)\n",
+    "    print(\n",
+    "        f'Cost of the model is {c_final} with {iterations} iterations and {t} s')\n",
     "    values.append((theta, c_final, theta_hist, iterations, t, r))\n",
     "\n",
     "\n",
-    "\n",
-    "print(values)"
+    "print(values)\n"
    ]
   },
   {
@@ -2652,7 +2662,7 @@
     }
    ],
    "source": [
-    "err_og = cost(x_test, y_test, np.array([[3],[1],[2]]), n)\n",
+    "err_og = cost(x_test, y_test, np.array([[3], [1], [2]]), n)\n",
     "print(f\"Original Test Error:{err_og}\")\n",
     "\n",
     "for value in values:\n",
@@ -2660,7 +2670,7 @@
     "    err_new = cost(x_test, y_test, theta, n)\n",
     "    print(f\"Test error learned: {err_new} with r: {r}\")\n",
     "\n",
-    "    print(f\"Difference: {err_new-err_og} with r: {r}\")"
+    "    print(f\"Difference: {err_new-err_og} with r: {r}\")\n"
    ]
   },
   {
@@ -2694,30 +2704,30 @@
    "source": [
     "from matplotlib.animation import FuncAnimation\n",
     "\n",
-    "    \n",
-    "#Plot Graph\n",
-    "fig = plt.figure(figsize=(15,10))\n",
+    "\n",
+    "# Plot Graph\n",
+    "fig = plt.figure(figsize=(15, 10))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "(theta, c_final, theta_hist, iterations, time, r) = values[0]\n",
     "print(theta)\n",
-    "t = theta_hist.T[::100,:]\n",
+    "t = theta_hist.T[::100, :]\n",
     "step = 10\n",
-    "ax.set_xlim(np.amin(t[:,0]), np.amax(t[:,0]))\n",
-    "ax.set_ylim(np.amin(t[:,1]), np.amax(t[:,1]))\n",
-    "ax.set_zlim(np.amin(t[:,2]), np.amax(t[:,2]))\n",
+    "ax.set_xlim(np.amin(t[:, 0]), np.amax(t[:, 0])), ax.set_ylim(np.amin(\n",
+    "    t[:, 1]), np.amax(t[:, 1])), ax.set_zlim(np.amin(t[:, 2]), np.amax(t[:, 2]))\n",
     "sc = ax.scatter([], [], [])\n",
     "x_, y_, z_ = [], [], []\n",
     "\n",
+    "\n",
     "def animate(i):\n",
-    "    x_.append(t[i,0])\n",
-    "    y_.append(t[i,1])\n",
-    "    z_.append(t[i,2])\n",
+    "    x_.append(t[i, 0]), y_.append(t[i, 1]), z_.append(t[i, 2])\n",
     "    sc._offsets3d = (x_, y_, z_)\n",
     "    return sc\n",
     "\n",
-    "anim = FuncAnimation(fig, animate, frames=np.arange(0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
-    "anim.save('q2_1c.gif', writer='pillow')"
+    "\n",
+    "anim = FuncAnimation(fig, animate, frames=np.arange(\n",
+    "    0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
+    "anim.save('q2_1c.gif', writer='pillow')\n"
    ]
   },
   {
@@ -2750,30 +2760,20 @@
     }
    ],
    "source": [
-    "from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "    \n",
-    "#Plot Graph\n",
-    "fig = plt.figure(figsize=(15,10))\n",
+    "# Plot Graph\n",
+    "fig = plt.figure(figsize=(15, 10))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "(theta, c_final, theta_hist, iterations, time, r) = values[1]\n",
-    "predictions = predict(x_test, theta)\n",
-    "with open('results.txt', 'w+') as f:\n",
-    "    for item in predictions:\n",
-    "        f.write('%s\\n' %item[0])\n",
-    "     \n",
-    "    print(\"File written successfully\")\n",
-    "f.close()\n",
-    "t =  theta_hist.T[0::10,:]\n",
+    "t = theta_hist.T[0::10, :]\n",
     "print(theta)\n",
-    "ax.set_xlim(np.amin(t[:,0]), np.amax(t[:,0]))\n",
-    "ax.set_ylim(np.amin(t[:,1]), np.amax(t[:,1]))\n",
-    "ax.set_zlim(np.amin(t[:,2]), np.amax(t[:,2]))\n",
+    "ax.set_xlim(np.amin(t[:, 0]), np.amax(t[:, 0])), ax.set_ylim(np.amin(\n",
+    "    t[:, 1]), np.amax(t[:, 1])), ax.set_zlim(np.amin(t[:, 2]), np.amax(t[:, 2]))\n",
     "sc = ax.scatter([], [], [])\n",
     "x_, y_, z_ = [], [], []\n",
     "\n",
-    "anim = FuncAnimation(fig, animate, frames=np.arange(0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
+    "anim = FuncAnimation(fig, animate, frames=np.arange(\n",
+    "    0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
     "anim.save('q2_100c.gif', writer='pillow')\n"
    ]
   },
@@ -2806,23 +2806,27 @@
     }
    ],
    "source": [
-    "from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "    \n",
-    "#Plot Graph\n",
-    "fig = plt.figure(figsize=(15,10))\n",
+    "# Plot Graph\n",
+    "fig = plt.figure(figsize=(15, 10))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "(theta, c_final, theta_hist, iterations, time, r) = values[2]\n",
-    "t = theta_hist.T[0::10,:]\n",
+    "predictions = predict(x_test, theta)\n",
+    "with open('results.txt', 'w+') as f:\n",
+    "    for item in predictions:\n",
+    "        f.write('%s\\n' % item[0])\n",
+    "\n",
+    "    print(\"File written successfully\")\n",
+    "f.close()\n",
+    "t = theta_hist.T[0::10, :]\n",
     "print(theta)\n",
-    "ax.set_xlim(np.amin(t[:,0]), np.amax(t[:,0]))\n",
-    "ax.set_ylim(np.amin(t[:,1]), np.amax(t[:,1]))\n",
-    "ax.set_zlim(np.amin(t[:,2]), np.amax(t[:,2]))\n",
+    "ax.set_xlim(np.amin(t[:, 0]), np.amax(t[:, 0])), ax.set_ylim(np.amin(\n",
+    "    t[:, 1]), np.amax(t[:, 1])), ax.set_zlim(np.amin(t[:, 2]), np.amax(t[:, 2]))\n",
     "sc = ax.scatter([], [], [])\n",
     "x_, y_, z_ = [], [], []\n",
     "\n",
-    "anim = FuncAnimation(fig, animate, frames=np.arange(0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
+    "anim = FuncAnimation(fig, animate, frames=np.arange(\n",
+    "    0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
     "anim.save('q2_10000c.gif', writer='pillow')\n"
    ]
   },
@@ -2855,24 +2859,21 @@
     }
    ],
    "source": [
-    "from matplotlib.animation import FuncAnimation\n",
-    "\n",
-    "    \n",
-    "#Plot Graph\n",
-    "fig = plt.figure(figsize=(15,10))\n",
+    "# Plot Graph\n",
+    "fig = plt.figure(figsize=(15, 10))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
     "(theta, c_final, theta_hist, iterations, time, r) = values[3]\n",
-    "t = theta_hist.T[0::10,:] \n",
+    "t = theta_hist.T[0::10, :]\n",
     "print(theta)\n",
-    "ax.set_xlim(np.amin(t[:,0]), np.amax(t[:,0]))\n",
-    "ax.set_ylim(np.amin(t[:,1]), np.amax(t[:,1]))\n",
-    "ax.set_zlim(np.amin(t[:,2]), np.amax(t[:,2]))\n",
+    "ax.set_xlim(np.amin(t[:, 0]), np.amax(t[:, 0])), ax.set_ylim(np.amin(\n",
+    "    t[:, 1]), np.amax(t[:, 1])), ax.set_zlim(np.amin(t[:, 2]), np.amax(t[:, 2]))\n",
     "sc = ax.scatter([], [], [])\n",
     "x_, y_, z_ = [], [], []\n",
     "\n",
-    "anim = FuncAnimation(fig, animate, frames=np.arange(0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
-    "anim.save('q2_1000000c.gif', writer='pillow')"
+    "anim = FuncAnimation(fig, animate, frames=np.arange(\n",
+    "    0, t.shape[0], step), interval=200, repeat_delay=3000, blit=False)\n",
+    "anim.save('q2_1000000c.gif', writer='pillow')\n"
    ]
   },
   {
