--- a/Assignment1/q3/q3.ipynb
+++ b/Assignment1/q3/q3.ipynb
@@ -152,13 +152,13 @@
     "# Decision Boundary\n",
     "i_x0 = [i for i in range(len(y)) if y[i] == 0]\n",
     "i_x1 = [i for i in range(len(y)) if y[i] == 1]\n",
-    "x_val = np.array([np.min(x[:, 1]), np.max(x[:, 1])]).reshape(1, -1)\n",
-    "y_val = (-1./t_final[2:3]).dot(t_final[1:2].dot(x_val)) - t_final[:1]\n",
+    "x_vals = np.array([np.min(x[:, 1]), np.max(x[:, 1])]).reshape(1, -1)\n",
+    "y_vals = (-1./t_final[2:3]).dot(t_final[1:2].dot(x_vals)) - t_final[:1]\n",
     "\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.scatter(x[i_x0][:, 1], x[i_x0][:, 2], c='r', label='Label 0')\n",
     "plt.scatter(x[i_x1][:, 1], x[i_x1][:, 2], c='b', label='Label 1')\n",
-    "plt.plot(x_val.ravel(), y_val.ravel(), label='Decision Boundary')\n",
+    "plt.plot(x_vals.ravel(), y_vals.ravel(), label='Decision Boundary')\n",
     "plt.legend()\n",
     "plt.savefig('q3_b.png', dpi=1000, bbox_inches='tight')\n",
     "plt.show(block=False)\n"
